--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-feather": "^2.0.8",
     "react-helmet": "^6.0.0"
   },
   "devDependencies": {
